<resources>
    <string name="app_name">RealmDBKotlin</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="fetch">Fetch</string>
    <string name="fetchAll">Fetch All</string>
    <string name="person">Person</string>
    <string name="department">Department</string>
</resources>
